# dapodik-webservice

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pytest.yml  python-publish.yml
dapodik_webservice/: __init__.py  __main__.py  converter.py  dapodik_webservice.py  exception.py  main.py  result.py  typing.py  util.py
dapodik_webservice/console/: __init__.py  console.py  pengguna.py  peserta_didik.py  ptk.py  rombongan_belajar.py  sekolah.py  util.py
dapodik_webservice/models/: __init__.py  base.py  pengguna.py  peserta_didik.py  sekolah.py
dapodik_webservice/models/ptk/: __init__.py  ptk.py  rwy_kepangkatan.py  rwy_pend_formal.py
dapodik_webservice/models/rombongan_belajar/: anggota_rombel.py  pembelajaran.py  rombongan_belajar.py
dapodik_webservice/template/: TEMPLATE.xlsx  __init__.py
docs/: index.html
tests/: test_dapodik_webservice.py
tests/test_local/: conftest.py  test_pengguna.py  test_peserta_didik.py  test_ptk.py  test_rombongan_belajar.py  test_sekolah.py
