[tool.poetry]
name = "dapodik-webservice"
version = "2.0.0"
description = "SDK Python Web Service aplikasi Dapodik"
authors = ["hexatester <habibrohman@protonmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://dapodix.github.io/dapodik-webservice/"
repository = "https://github.com/dapodix/dapodik-webservice"
include = [
    "LICENSE",
    "README.md",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.25.1"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
rope = "^0.18.0"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
